# rust-playground

./: .travis.yml  CRATE_POLICY.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: crate-addition-or-update-request.md  crate-addition-or-update.md
.github/actions/build-and-push-image/: action.yml
.github/workflows/: ci.yml  cron.yml
.travis/: build-containers.sh  compile-backend.sh  compile-frontend.sh  upload-compiled-artifacts.sh
ci/: Dockerfile  Dockerfile.dockerignore  Gemfile  build-backend.sh  generate  workflows.yml
compiler/: .gitignore  README.md  build.sh  fetch.sh
compiler/base/: .dockerignore  Cargo.toml  Dockerfile  attach_notice.sh  cargo-miri-playground  cargo-wasm  cargo.sh  crate-information.json  entrypoint.sh  fix-modification-time.sh  postinstall.sh  security_notice.txt  wasm.Dockerfile
compiler/base/asm-cleanup/: Cargo.toml
compiler/base/asm-cleanup/src/: lib.rs
compiler/base/modify-cargo-toml/: Cargo.toml
compiler/base/modify-cargo-toml/src/: lib.rs  main.rs
compiler/base/orchestrator/: Cargo.toml
compiler/base/orchestrator/src/: coordinator.rs  lib.rs  message.rs  worker.rs
compiler/base/orchestrator/src/coordinator/: limits.rs
compiler/beta/: Dockerfile
compiler/clippy/: Dockerfile
compiler/miri/: Dockerfile  cargo-miri-playground
compiler/nightly/: Dockerfile
compiler/rustfmt/: Dockerfile
compiler/stable/: Dockerfile
compiler/wasm-pack/: Cargo.toml  Dockerfile  cargo-pack  wasm.Dockerfile
compiler/wasm-pack/src/: lib.rs
deployment/: Cargo.toml  Dockerfile  Dockerrun.aws.json  Dockerrun.aws.json.template  aws_launch_instance.sh  crontab  deploy.sh  deploy_1.sh  playground-reverse-proxy  playground.service  playground_config.json  setup_api_gateway.md  startup.sh  ubuntu.md  update.sh
deployment/assets/: machine_setup.sh  mappings.json  playground.service
deployment/src/: main.rs
tests/: .gitignore  Gemfile
tests/spec/: spec_helper.rb
tests/spec/features/: assistance_spec.rb  automatic_primary_action_spec.rb  backtrace_spec.rb  compilation_modes_spec.rb  compilation_targets_spec.rb  crate_types_spec.rb  editions_spec.rb  editor_types_spec.rb  excessive_execution_spec.rb  formatting_spec.rb  highlighting_error_output_spec.rb  highlighting_mir_output_spec.rb  multiple_channels_spec.rb  navigation_spec.rb  reset_configuration_spec.rb  security_spec.rb  segfault_spec.rb  sharing_with_others_spec.rb  streaming_spec.rb  test_action_spec.rb  tests_spec.rb  tools_spec.rb  url_parameters_spec.rb
tests/spec/requests/: caching_spec.rb  connection.rb  cors_spec.rb  evaluate_spec.rb  malformed_json_spec.rb
tests/spec/support/: editor.rb  notifications.rb  playground_actions.rb
tests/spec/support/matchers/: be_at_url.rb  editor.rb
top-crates/: Cargo.toml  crate-modifications.toml
top-crates/src/: lib.rs  main.rs
ui/: .gitignore  Cargo.toml  Dockerfile  Editor.jsx  Header.jsx  Makefile  Output.jsx  Playground.jsx  README.md  actions.js  build.rs  build.sh  gist.js  index.js  npm-shrinkwrap.json  package.json  plan.txt  reducers.js
ui/frontend/: .babelrc  .browserslistrc  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  .stylelintrc.json  AdvancedEditor.jsx  AdvancedEditor.tsx  AdvancedOptionsMenu.tsx  AdvancedResetMenu.tsx  BuildMenu.module.css  BuildMenu.tsx  ButtonMenuItem.module.css  ButtonMenuItem.tsx  ButtonSet.module.css  ButtonSet.tsx  ChannelMenu.module.css  ChannelMenu.tsx  ConfigElement.module.css  ConfigElement.tsx  ConfigMenu.tsx  Configuration.jsx  Configuration.tsx  Editor.jsx  Editor.module.css  Editor.tsx  Header.jsx  Header.module.css  Header.tsx  HeaderButton.module.css  HeaderButton.tsx  Help.jsx  Help.module.css  Help.tsx  HelpExample.jsx  HelpExample.module.css  HelpExample.tsx  Icon.module.css  Icon.tsx  (+84 more)
ui/frontend/Output/: Assembly.tsx  Container.tsx  Execute.module.css  Execute.tsx  Gist.module.css  Gist.tsx  Header.module.css  Header.tsx  IFrame.tsx  LlvmIr.tsx  Loader.tsx  OutputPrism.module.css  OutputPrism.tsx  PaneWithCode.tsx  PaneWithMir.tsx  PaneWithWasmPack.tsx  Section.module.css  Section.tsx  SimplePane.tsx  WarnAboutNoSymbols.tsx
ui/frontend/assets/favicon/: browserconfig.xml  site.webmanifest
ui/frontend/augmentations/: react.d.ts
ui/frontend/editor/: AceEditor.tsx  AceEditorCore.tsx  Editor.module.css  Editor.tsx  MonacoEditor.tsx  MonacoEditorCore.tsx  SimpleEditor.tsx  rust_monaco_def.ts  useLatest.ts
ui/frontend/hooks/: shortcuts.tsx
ui/frontend/intellisense/: ConfigMenu.module.css  ConfigMenu.tsx  config.ts  crates.ts  index.ts  ra-worker.js
ui/frontend/reducers/: browser.ts  client.ts  code.ts  compilerFlags.ts  configuration.js  configuration.ts  crates.ts  featureFlags.ts  globalConfiguration.ts  index.js  index.ts  notifications.ts  output.js  page.js  page.ts  position.ts  rustfmt.ts  selection.ts  stdin.ts  versions.ts  websocket.ts
ui/frontend/reducers/output/: assembly.ts  ast.ts  clippy.ts  execute.ts  format.js  format.ts  gist.ts  hir.ts  index.ts  llvmIr.ts  macroExpansion.ts  meta.js  meta.ts  mir.ts  miri.ts  sharedStateManagement.js  sharedStateManagement.ts  wasm.ts  wasmPack.ts
ui/frontend/selectors/: gist.ts  index.js  index.spec.ts  index.ts
ui/frontend/types/: ace-builds.ts  brace.d.ts  react-ace.d.ts  react-prism.d.ts
ui/frontend/uss-router/: Link.jsx  Link.tsx  Router.jsx  Router.tsx  index.js  index.ts
ui/scripts/: build-gui.sh  build-server.sh
ui/src/: asm_cleanup.rs  data.rs.in  env.rs  gist.rs  logging.rs  main.rs  metrics.rs  public_http_api.rs  request_database.rs  sandbox.rs  server_axum.rs  server_iron.rs
ui/src/middleware/: cache.rs  mod.rs  rewrite.rs
ui/src/server_axum/: cache.rs  websocket.rs
