[package]
name = "deployment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-ec2 = "0.12.0"
aws-config = "0.12.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
futures = "0.3.21"
env_logger = "0.9.0"
anyhow = "1.0.57"
base64 = "0.13.0"
dirs = "4.0.0"