[package]
authors = ["Jake Goulding <jake.goulding@integer32.com>"]
name = "rust-playground-top-crates"
version = "0.1.6"
edition = "2018"

description = "Calculates what crates should be included in the playground"
license = "MIT OR Apache-2.0"
repository = "https://github.com/integer32llc/rust-playground"

[dependencies]
cargo = "0.62.0"
itertools = "0.10.0"
reqwest = { version = "0.11.0", features = ["blocking"] }
serde = "1.0.1"
serde_derive = "1.0.1"
serde_json = "1.0.0"
toml = "0.5.0"
