[package]
authors = ["Jake Goulding <jake.goulding@integer32.com>"]
name = "ui"
version = "0.1.0"
edition = "2018"

[features]
default = ['fork-bomb-prevention']
fork-bomb-prevention = []

[dependencies]
asm-cleanup = { path = "../compiler/base/asm-cleanup" }
async-trait = "0.1.52"
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
dotenv = "0.15.0"
futures = "0.3.21"
lazy_static = "1.0.0"
octocrab = "0.34"
openssl-probe = "0.1.2"
orchestrator = { path = "../compiler/base/orchestrator" }
prometheus = "0.13.0"
regex = "1.0.0"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
snafu = "0.8.0"
strum = { version = "0.26.1", features = ["derive"] }
tempfile = "3"
tokio = { version = "1.9", features = ["macros", "time", "process", "rt-multi-thread"] }
tokio-util = "0.7.9"
tower-http = { version = "0.5", features = ["cors", "fs", "request-id", "set-header", "trace"] }
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
