[package]
name = "playground"
version = "0.0.1"
authors = ["The Rust Playground"]
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
incremental = false
[dependencies.addr2line]
package = "addr2line"
version = "=0.14.1"

[dependencies.adler]
package = "adler"
version = "=1.0.2"

[dependencies.adler32]
package = "adler32"
version = "=1.2.0"

[dependencies.ahash]
package = "ahash"
version = "=0.4.7"

[dependencies.aho_corasick]
package = "aho-corasick"
version = "=0.7.15"

[dependencies.ansi_term]
package = "ansi_term"
version = "=0.12.1"

[dependencies.ansi_term_0_11_0]
package = "ansi_term"
version = "=0.11.0"

[dependencies.anyhow]
package = "anyhow"
version = "=1.0.38"

[dependencies.approx]
package = "approx"
version = "=0.4.0"

[dependencies.arc_swap]
package = "arc-swap"
version = "=0.4.8"

[dependencies.arrayvec]
package = "arrayvec"
version = "=0.5.2"

[dependencies.async_trait]
package = "async-trait"
version = "=0.1.42"

[dependencies.atty]
package = "atty"
version = "=0.2.14"

[dependencies.autocfg]
package = "autocfg"
version = "=1.0.1"

[dependencies.backtrace]
package = "backtrace"
version = "=0.3.56"

[dependencies.base64]
package = "base64"
version = "=0.13.0"

[dependencies.bit_set]
package = "bit-set"
version = "=0.5.2"

[dependencies.bit_vec]
package = "bit-vec"
version = "=0.6.3"

[dependencies.bitflags]
package = "bitflags"
version = "=1.2.1"

[dependencies.block_buffer]
package = "block-buffer"
version = "=0.9.0"

[dependencies.bstr]
package = "bstr"
version = "=0.2.15"

[dependencies.bytemuck]
package = "bytemuck"
version = "=1.5.1"
features = ["bytemuck_derive", "derive", "extern_crate_alloc", "extern_crate_std", "zeroable_maybe_uninit"]

[dependencies.byteorder]
package = "byteorder"
version = "=1.4.2"

[dependencies.bytes]
package = "bytes"
version = "=1.0.1"

[dependencies.cc]
package = "cc"
version = "=1.0.67"

[dependencies.cfg_if]
package = "cfg-if"
version = "=1.0.0"

[dependencies.cfg_if_0_1_10]
package = "cfg-if"
version = "=0.1.10"

[dependencies.chrono]
package = "chrono"
version = "=0.4.19"
features = ["serde"]

[dependencies.clap]
package = "clap"
version = "=2.33.3"

[dependencies.color_quant]
package = "color_quant"
version = "=1.1.0"

[dependencies.const_fn]
package = "const_fn"
version = "=0.4.5"

[dependencies.cpuid_bool]
package = "cpuid-bool"
version = "=0.1.2"

[dependencies.crc32fast]
package = "crc32fast"
version = "=1.2.1"

[dependencies.crossbeam]
package = "crossbeam"
version = "=0.8.0"

[dependencies.crossbeam_channel]
package = "crossbeam-channel"
version = "=0.5.0"

[dependencies.crossbeam_deque]
package = "crossbeam-deque"
version = "=0.8.0"

[dependencies.crossbeam_epoch]
package = "crossbeam-epoch"
version = "=0.9.3"

[dependencies.crossbeam_queue]
package = "crossbeam-queue"
version = "=0.3.1"

[dependencies.crossbeam_utils]
package = "crossbeam-utils"
version = "=0.8.3"

[dependencies.crypto_mac]
package = "crypto-mac"
version = "=0.10.0"

[dependencies.csv]
package = "csv"
version = "=1.1.5"

[dependencies.csv_core]
package = "csv-core"
version = "=0.1.10"

[dependencies.data_encoding]
package = "data-encoding"
version = "=2.3.2"

[dependencies.debug_unreachable]
package = "new_debug_unreachable"
version = "=1.0.4"

[dependencies.deflate]
package = "deflate"
version = "=0.8.6"

[dependencies.derivative]
package = "derivative"
version = "=2.2.0"

[dependencies.digest]
package = "digest"
version = "=0.9.0"

[dependencies.dtoa]
package = "dtoa"
version = "=0.4.7"

[dependencies.either]
package = "either"
version = "=1.6.1"

[dependencies.encoding_rs]
package = "encoding_rs"
version = "=0.8.28"

[dependencies.env_logger]
package = "env_logger"
version = "=0.8.3"

[dependencies.error_chain]
package = "error-chain"
version = "=0.12.4"

[dependencies.fallible_iterator]
package = "fallible-iterator"
version = "=0.2.0"

[dependencies.fallible_streaming_iterator]
package = "fallible-streaming-iterator"
version = "=0.1.9"

[dependencies.filetime]
package = "filetime"
version = "=0.2.14"

[dependencies.fixedbitset]
package = "fixedbitset"
version = "=0.2.0"

[dependencies.flate2]
package = "flate2"
version = "=1.0.20"

[dependencies.fnv]
package = "fnv"
version = "=1.0.7"

[dependencies.foreign_types]
package = "foreign-types"
version = "=0.3.2"

[dependencies.foreign_types_shared]
package = "foreign-types-shared"
version = "=0.1.1"

[dependencies.form_urlencoded]
package = "form_urlencoded"
version = "=1.0.1"

[dependencies.futf]
package = "futf"
version = "=0.1.4"

[dependencies.futures]
package = "futures"
version = "=0.3.13"
features = ["compat", "io-compat", "thread-pool"]

[dependencies.futures_channel]
package = "futures-channel"
version = "=0.3.13"

[dependencies.futures_core]
package = "futures-core"
version = "=0.3.13"

[dependencies.futures_executor]
package = "futures-executor"
version = "=0.3.13"

[dependencies.futures_io]
package = "futures-io"
version = "=0.3.13"

[dependencies.futures_macro]
package = "futures-macro"
version = "=0.3.13"

[dependencies.futures_sink]
package = "futures-sink"
version = "=0.3.13"

[dependencies.futures_task]
package = "futures-task"
version = "=0.3.13"

[dependencies.futures_util]
package = "futures-util"
version = "=0.3.13"

[dependencies.generic_array]
package = "generic-array"
version = "=0.14.4"

[dependencies.getrandom]
package = "getrandom"
version = "=0.2.2"

[dependencies.getrandom_0_1_16]
package = "getrandom"
version = "=0.1.16"

[dependencies.gif]
package = "gif"
version = "=0.11.1"

[dependencies.gimli]
package = "gimli"
version = "=0.23.0"

[dependencies.glob]
package = "glob"
version = "=0.3.0"

[dependencies.h2]
package = "h2"
version = "=0.3.1"

[dependencies.hashbrown]
package = "hashbrown"
version = "=0.9.1"

[dependencies.hashlink]
package = "hashlink"
version = "=0.6.0"

[dependencies.hmac]
package = "hmac"
version = "=0.10.1"

[dependencies.html5ever]
package = "html5ever"
version = "=0.25.1"

[dependencies.http]
package = "http"
version = "=0.2.3"

[dependencies.http_body]
package = "http-body"
version = "=0.4.0"

[dependencies.httparse]
package = "httparse"
version = "=1.3.5"

[dependencies.httpdate]
package = "httpdate"
version = "=0.3.2"

[dependencies.humantime]
package = "humantime"
version = "=2.1.0"

[dependencies.hyper]
package = "hyper"
version = "=0.14.4"
features = ["full"]

[dependencies.hyper_tls]
package = "hyper-tls"
version = "=0.5.0"

[dependencies.idna]
package = "idna"
version = "=0.2.2"

[dependencies.image]
package = "image"
version = "=0.23.14"

[dependencies.indexmap]
package = "indexmap"
version = "=1.6.1"

[dependencies.instant]
package = "instant"
version = "=0.1.9"

[dependencies.iovec]
package = "iovec"
version = "=0.1.4"

[dependencies.ipnet]
package = "ipnet"
version = "=2.3.0"

[dependencies.itertools]
package = "itertools"
version = "=0.10.0"

[dependencies.itoa]
package = "itoa"
version = "=0.4.7"

[dependencies.jpeg_decoder]
package = "jpeg-decoder"
version = "=0.1.22"

[dependencies.lazy_static]
package = "lazy_static"
version = "=1.4.0"

[dependencies.libc]
package = "libc"
version = "=0.2.87"

[dependencies.libm]
package = "libm"
version = "=0.2.1"

[dependencies.libsqlite3_sys]
package = "libsqlite3-sys"
version = "=0.20.1"

[dependencies.linked_hash_map]
package = "linked-hash-map"
version = "=0.5.4"

[dependencies.lock_api]
package = "lock_api"
version = "=0.4.2"

[dependencies.log]
package = "log"
version = "=0.4.14"

[dependencies.log4rs]
package = "log4rs"
version = "=1.0.0"

[dependencies.log_mdc]
package = "log-mdc"
version = "=0.1.0"

[dependencies.mac]
package = "mac"
version = "=0.1.1"

[dependencies.markup5ever]
package = "markup5ever"
version = "=0.10.0"

[dependencies.markup5ever_rcdom]
package = "markup5ever_rcdom"
version = "=0.1.0"

[dependencies.matches]
package = "matches"
version = "=0.1.8"

[dependencies.matrixmultiply]
package = "matrixmultiply"
version = "=0.3.0"

[dependencies.matrixmultiply_0_2_4]
package = "matrixmultiply"
version = "=0.2.4"

[dependencies.md5]
package = "md5"
version = "=0.7.0"

[dependencies.memchr]
package = "memchr"
version = "=2.3.4"

[dependencies.memmap]
package = "memmap"
version = "=0.7.0"

[dependencies.memoffset]
package = "memoffset"
version = "=0.6.1"

[dependencies.mime]
package = "mime"
version = "=0.3.16"

[dependencies.miniz_oxide]
package = "miniz_oxide"
version = "=0.4.4"

[dependencies.miniz_oxide_0_3_7]
package = "miniz_oxide"
version = "=0.3.7"

[dependencies.mio]
package = "mio"
version = "=0.7.9"
features = ["net", "os-ext", "os-poll"]

[dependencies.nalgebra]
package = "nalgebra"
version = "=0.25.1"

[dependencies.native_tls]
package = "native-tls"
version = "=0.2.7"

[dependencies.ndarray]
package = "ndarray"
version = "=0.14.0"

[dependencies.net2]
package = "net2"
version = "=0.2.37"

[dependencies.num]
package = "num"
version = "=0.3.1"

[dependencies.num_bigint]
package = "num-bigint"
version = "=0.3.1"

[dependencies.num_complex]
package = "num-complex"
version = "=0.3.1"

[dependencies.num_cpus]
package = "num_cpus"
version = "=1.13.0"

[dependencies.num_integer]
package = "num-integer"
version = "=0.1.44"

[dependencies.num_iter]
package = "num-iter"
version = "=0.1.42"

[dependencies.num_rational]
package = "num-rational"
version = "=0.3.2"

[dependencies.num_traits]
package = "num-traits"
version = "=0.2.14"

[dependencies.object]
package = "object"
version = "=0.23.0"

[dependencies.once_cell]
package = "once_cell"
version = "=1.7.2"

[dependencies.opaque_debug]
package = "opaque-debug"
version = "=0.3.0"

[dependencies.openssl]
package = "openssl"
version = "=0.10.32"

[dependencies.openssl_probe]
package = "openssl-probe"
version = "=0.1.2"

[dependencies.openssl_sys]
package = "openssl-sys"
version = "=0.9.60"

[dependencies.ordered_float]
package = "ordered-float"
version = "=2.1.1"

[dependencies.parking_lot]
package = "parking_lot"
version = "=0.11.1"

[dependencies.parking_lot_core]
package = "parking_lot_core"
version = "=0.8.3"

[dependencies.paste]
package = "paste"
version = "=1.0.4"

[dependencies.percent_encoding]
package = "percent-encoding"
version = "=2.1.0"

[dependencies.pest]
package = "pest"
version = "=2.1.3"

[dependencies.petgraph]
package = "petgraph"
version = "=0.5.1"

[dependencies.phf]
package = "phf"
version = "=0.8.0"

[dependencies.phf_codegen]
package = "phf_codegen"
version = "=0.8.0"

[dependencies.phf_generator]
package = "phf_generator"
version = "=0.8.0"

[dependencies.phf_shared]
package = "phf_shared"
version = "=0.8.0"

[dependencies.pin_project]
package = "pin-project"
version = "=1.0.5"

[dependencies.pin_project_internal]
package = "pin-project-internal"
version = "=1.0.5"

[dependencies.pin_project_lite]
package = "pin-project-lite"
version = "=0.2.5"

[dependencies.pin_utils]
package = "pin-utils"
version = "=0.1.0"

[dependencies.pkg_config]
package = "pkg-config"
version = "=0.3.19"

[dependencies.png]
package = "png"
version = "=0.16.8"

[dependencies.postgres]
package = "postgres"
version = "=0.19.0"

[dependencies.postgres_protocol]
package = "postgres-protocol"
version = "=0.6.0"

[dependencies.postgres_types]
package = "postgres-types"
version = "=0.2.0"

[dependencies.ppv_lite86]
package = "ppv-lite86"
version = "=0.2.10"

[dependencies.precomputed_hash]
package = "precomputed-hash"
version = "=0.1.1"

[dependencies.proc_macro2]
package = "proc-macro2"
version = "=1.0.24"
features = ["span-locations"]

[dependencies.proc_macro_hack]
package = "proc-macro-hack"
version = "=0.5.19"

[dependencies.proc_macro_nested]
package = "proc-macro-nested"
version = "=0.1.7"

[dependencies.quick_error]
package = "quick-error"
version = "=2.0.0"

[dependencies.quote]
package = "quote"
version = "=1.0.9"

[dependencies.rand]
package = "rand"
version = "=0.8.3"
features = ["serde1", "small_rng"]

[dependencies.rand_0_7_3]
package = "rand"
version = "=0.7.3"

[dependencies.rand_chacha]
package = "rand_chacha"
version = "=0.3.0"

[dependencies.rand_chacha_0_2_2]
package = "rand_chacha"
version = "=0.2.2"

[dependencies.rand_core]
package = "rand_core"
version = "=0.6.2"
features = ["alloc", "getrandom", "serde", "serde1", "std"]

[dependencies.rand_core_0_5_1]
package = "rand_core"
version = "=0.5.1"

[dependencies.rand_distr]
package = "rand_distr"
version = "=0.4.0"

[dependencies.rand_hc]
package = "rand_hc"
version = "=0.3.0"

[dependencies.rand_pcg]
package = "rand_pcg"
version = "=0.3.0"

[dependencies.rand_pcg_0_2_1]
package = "rand_pcg"
version = "=0.2.1"

[dependencies.rawpointer]
package = "rawpointer"
version = "=0.2.1"

[dependencies.rayon]
package = "rayon"
version = "=1.5.0"

[dependencies.rayon_core]
package = "rayon-core"
version = "=1.9.0"

[dependencies.regex]
package = "regex"
version = "=1.4.3"

[dependencies.regex_automata]
package = "regex-automata"
version = "=0.1.9"

[dependencies.regex_syntax]
package = "regex-syntax"
version = "=0.6.22"

[dependencies.remove_dir_all]
package = "remove_dir_all"
version = "=0.5.3"

[dependencies.reqwest]
package = "reqwest"
version = "=0.11.1"
features = ["blocking", "cookies", "json", "multipart"]

[dependencies.ring]
package = "ring"
version = "=0.16.20"

[dependencies.rusqlite]
package = "rusqlite"
version = "=0.24.2"
features = ["bundled-full"]

[dependencies.rustc_demangle]
package = "rustc-demangle"
version = "=0.1.18"

[dependencies.rustc_version]
package = "rustc_version"
version = "=0.3.3"

[dependencies.ryu]
package = "ryu"
version = "=1.0.5"

[dependencies.same_file]
package = "same-file"
version = "=1.0.6"

[dependencies.scoped_threadpool]
package = "scoped_threadpool"
version = "=0.1.9"

[dependencies.scopeguard]
package = "scopeguard"
version = "=1.1.0"

[dependencies.select]
package = "select"
version = "=0.5.0"

[dependencies.semver]
package = "semver"
version = "=0.11.0"

[dependencies.semver_parser]
package = "semver-parser"
version = "=0.10.2"

[dependencies.serde]
package = "serde"
version = "=1.0.123"
features = ["derive", "rc"]

[dependencies.serde_derive]
package = "serde_derive"
version = "=1.0.123"

[dependencies.serde_json]
package = "serde_json"
version = "=1.0.64"
features = ["raw_value"]

[dependencies.serde_urlencoded]
package = "serde_urlencoded"
version = "=0.7.0"

[dependencies.serde_value]
package = "serde-value"
version = "=0.7.0"

[dependencies.serde_yaml]
package = "serde_yaml"
version = "=0.8.17"

[dependencies.sha2]
package = "sha2"
version = "=0.9.3"

[dependencies.simba]
package = "simba"
version = "=0.4.0"

[dependencies.siphasher]
package = "siphasher"
version = "=0.3.3"

[dependencies.slab]
package = "slab"
version = "=0.4.2"

[dependencies.smallvec]
package = "smallvec"
version = "=1.6.1"

[dependencies.smawk]
package = "smawk"
version = "=0.3.1"

[dependencies.socket2]
package = "socket2"
version = "=0.3.19"

[dependencies.spin]
package = "spin"
version = "=0.5.2"

[dependencies.standback]
package = "standback"
version = "=0.2.15"

[dependencies.string_cache]
package = "string_cache"
version = "=0.8.1"

[dependencies.string_cache_codegen]
package = "string_cache_codegen"
version = "=0.5.1"

[dependencies.stringprep]
package = "stringprep"
version = "=0.1.2"

[dependencies.strsim]
package = "strsim"
version = "=0.10.0"

[dependencies.strsim_0_8_0]
package = "strsim"
version = "=0.8.0"

[dependencies.subtle]
package = "subtle"
version = "=2.4.0"

[dependencies.syn]
package = "syn"
version = "=1.0.60"
features = ["extra-traits", "fold", "full", "visit", "visit-mut"]

[dependencies.synstructure]
package = "synstructure"
version = "=0.12.4"

[dependencies.tar]
package = "tar"
version = "=0.4.33"

[dependencies.tempfile]
package = "tempfile"
version = "=3.2.0"

[dependencies.tendril]
package = "tendril"
version = "=0.4.2"

[dependencies.termcolor]
package = "termcolor"
version = "=1.1.2"

[dependencies.textwrap]
package = "textwrap"
version = "=0.13.4"

[dependencies.textwrap_0_11_0]
package = "textwrap"
version = "=0.11.0"

[dependencies.thiserror]
package = "thiserror"
version = "=1.0.24"

[dependencies.thiserror_impl]
package = "thiserror-impl"
version = "=1.0.24"

[dependencies.thread_id]
package = "thread-id"
version = "=3.3.0"

[dependencies.thread_local]
package = "thread_local"
version = "=1.1.3"

[dependencies.threadpool]
package = "threadpool"
version = "=1.8.1"

[dependencies.tiff]
package = "tiff"
version = "=0.6.1"

[dependencies.time]
package = "time"
version = "=0.2.25"

[dependencies.time_0_1_44]
package = "time"
version = "=0.1.44"

[dependencies.time_macros]
package = "time-macros"
version = "=0.1.1"

[dependencies.time_macros_impl]
package = "time-macros-impl"
version = "=0.1.1"

[dependencies.tinyvec]
package = "tinyvec"
version = "=1.1.1"
features = ["alloc", "grab_spare_slice", "rustc_1_40", "serde"]

[dependencies.tinyvec_macros]
package = "tinyvec_macros"
version = "=0.1.0"

[dependencies.tokio]
package = "tokio"
version = "=1.2.0"
features = ["full", "test-util"]

[dependencies.tokio_native_tls]
package = "tokio-native-tls"
version = "=0.3.0"

[dependencies.tokio_postgres]
package = "tokio-postgres"
version = "=0.7.0"

[dependencies.tokio_util]
package = "tokio-util"
version = "=0.6.3"

[dependencies.toml]
package = "toml"
version = "=0.5.8"

[dependencies.tower_service]
package = "tower-service"
version = "=0.3.1"

[dependencies.tracing]
package = "tracing"
version = "=0.1.25"

[dependencies.tracing_core]
package = "tracing-core"
version = "=0.1.17"

[dependencies.traitobject]
package = "traitobject"
version = "=0.1.0"

[dependencies.try_lock]
package = "try-lock"
version = "=0.2.3"

[dependencies.typemap]
package = "typemap"
version = "=0.3.3"

[dependencies.typenum]
package = "typenum"
version = "=1.12.0"

[dependencies.ucd_trie]
package = "ucd-trie"
version = "=0.1.3"

[dependencies.unicase]
package = "unicase"
version = "=2.6.0"

[dependencies.unicode_bidi]
package = "unicode-bidi"
version = "=0.3.4"

[dependencies.unicode_normalization]
package = "unicode-normalization"
version = "=0.1.17"

[dependencies.unicode_segmentation]
package = "unicode-segmentation"
version = "=1.7.1"

[dependencies.unicode_width]
package = "unicode-width"
version = "=0.1.8"

[dependencies.unicode_xid]
package = "unicode-xid"
version = "=0.2.1"

[dependencies.unsafe_any]
package = "unsafe-any"
version = "=0.4.2"

[dependencies.untrusted]
package = "untrusted"
version = "=0.7.1"

[dependencies.url]
package = "url"
version = "=2.2.1"

[dependencies.utf8]
package = "utf-8"
version = "=0.7.5"

[dependencies.uuid]
package = "uuid"
version = "=0.8.2"
features = ["serde", "v1", "v3", "v4", "v5"]

[dependencies.vec_map]
package = "vec_map"
version = "=0.8.2"

[dependencies.version_check]
package = "version_check"
version = "=0.9.2"

[dependencies.walkdir]
package = "walkdir"
version = "=2.3.1"

[dependencies.want]
package = "want"
version = "=0.3.0"

[dependencies.weezl]
package = "weezl"
version = "=0.1.4"

[dependencies.winapi]
package = "winapi"
version = "=0.3.9"

[dependencies.xattr]
package = "xattr"
version = "=0.2.2"

[dependencies.xml5ever]
package = "xml5ever"
version = "=0.16.1"

[dependencies.yaml_rust]
package = "yaml-rust"
version = "=0.4.5"
